# pilgrim-optimizer

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
configs/: alms.json  board.json  buildings.json  duties.json  duties_allocation.json  merchant.json  piety.json  ship.json  timing.json
pilgrim/: __init__.py  cli.py
pilgrim_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scenarios/: allocation_abbey_to_special_activity_001.json  allocation_all_special_occupied_001.json  allocation_chapter_house_donated_001.json  allocation_chapter_house_move_between_special_activities_001.json  allocation_chapter_house_second_acolyte_001.json  allocation_hire_infirmary_insufficient_resource_001.json  allocation_hire_infirmary_market_001.json  allocation_hire_infirmary_merchant_none_001.json  allocation_hire_infirmary_opponent_001.json  allocation_infirmary_001.json  allocation_infirmary_donated_001.json  allocation_multi_move_001.json  allocation_special_activity_to_abbey_001.json  allocation_special_activity_to_special_activity_001.json  allocation_to_city_001.json  allocation_to_special_activity_001.json  alms_sandbox_001.json  build_roads_chapter_house_two_road_engineers_001.json  build_roads_deferred_001.json  build_roads_minority_cost_001.json  build_roads_road_engineer_001.json  building_availability_future_001.json  building_availability_round2_001.json  building_hire_donated_001.json  building_hire_insufficient_resource_001.json  building_hire_live_market_001.json  building_hire_merchant_none_001.json  building_hire_not_live_001.json  building_market_001.json  (+123 more)
(+116 files in other folders)
